--- a/css/hero.css
+++ b/css/hero.css
@@ -1,3 +1,8 @@
+/* Base font size for rem calculation */
+html {
+    font-size: 16px; /* 1rem = 16px */
+}
+
 /* First Section */
 #hero-container {
     width: 100%;
@@ -17,7 +22,7 @@
 .block {
     width: 33.33%;
     height: 100%;
-    font-size: 46px;
+    font-size: 2.875rem; /* 46px */
     font-weight: 500;
     text-align: center;
     display: flex;
@@ -36,7 +41,7 @@
 .block:nth-child(2) img {
     max-height: 94%;
     width: auto;
-    border-radius: 20px;
+    border-radius: 1.25rem; /* 20px */
 }
 
 .block:last-child {
@@ -51,19 +56,19 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: flex-end; /* Перемещение контента к нижнему краю */
+    align-items: flex-end;
     color: #fff;
 }
 
 #second-content {
     width: 80%;
-    margin-bottom: 20px; /* Добавление отступа снизу, если нужно */
+    margin-bottom: 1.25rem; /* 20px */
 }
 
 #second-content p {
-    font-size: 48px;
+    font-size: 3rem; /* 48px */
     text-align: left;
-    line-height: 150%;
+    line-height: 1.5;
 }
 
 .text-part {
@@ -87,9 +92,9 @@
 }
 
 #third-heading {
-    font-size: 46px;
+    font-size: 2.875rem; /* 46px */
     font-weight: 500;
     text-align: center;
-    line-height: 150%;
+    line-height: 1.5;
     color: #fff;
 }
