--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,7 @@ html {
     font-family: "Inter", sans-serif;
     background-color: #ffffff;
     overflow-x: hidden;
+    font-size: 16px; /* 1rem = 16px */
 }
 
 #footer {
