--- a/css/hero.css
+++ b/css/hero.css
@@ -83,7 +83,9 @@
     justify-content: center;
     align-items: center;
     color: #fff;
-    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #third-heading {
@@ -92,4 +94,17 @@
     text-align: center;
     line-height: 1.5;
     color: #fff;
+    opacity: 0;
+}
+
+.centered-image {
+    display: flex;
+    justify-content: center; /* Центрируем изображение */
+    width: 100%; /* Заставляем div занимать всю ширину */
+}
+
+#arrow-icon {
+    margin-top: 60px; /* Отступ сверху */
+    max-width: 100px; /* Ограничиваем ширину изображения для примера, можно регулировать */
+    opacity: 0;
 }
