--- a/css/global.css
+++ b/css/global.css
@@ -8,11 +8,12 @@ html {
     font-family: "Instrument Sans", sans-serif;
     background-color: #ffffff;
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch; /* Специфическое свойство для iOS */
+    width: 100%;
     font-size: 16px; /* 1rem = 16px */
     transition: none !important; /* Отключаем все переходы для всех элементов */
     animation: none !important;
     will-change: background-color;
-    overflow-x: hidden; /* Убирает горизонтальный скролл */
 }
 
 #footer {
