--- a/css/hero-mq.css
+++ b/css/hero-mq.css
@@ -27,6 +27,10 @@
         display: none; /* Скрыть изображение */
     }
 
+    #block-3 {
+        max-width: 90%; /* Скрыть изображение */
+    }
+
     /* 2nd section */
 
     #second-section {
@@ -60,7 +64,7 @@
 
     #third-section {
         height: auto; /* Высота по содержимому */
-        width: auto;
+        max-width: 90%;
         padding: 2rem 1rem; /* Добавить внутренние отступы */
         text-align: left;
         align-items: flex-start;
