--- a/css/reset-square.css
+++ b/css/reset-square.css
@@ -1,8 +1,11 @@
-/* Полный сброс всех стилей для всех элементов */
+/* Полный сброс всех стилей для всех элементов without !important */
 * {
     all: unset;
+    animation: none;
+    transition: none;
 }
 
+/* Убираем что не нужно показывать */
 style,
 script,
 link,
@@ -11,65 +14,8 @@ head {
     display: none !important;
 }
 
-/* Специфический сброс для основных тегов */
-body,
-div,
-section,
-article,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-span,
-img,
-ul,
-ol,
-li,
-table,
-tr,
-td,
-th,
-footer,
-header,
-main {
-    margin: 0;
-    padding: 0;
-    border: none;
-    background: none;
-    font: inherit;
-    vertical-align: baseline;
-    box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-}
-
-/* Сброс для кнопок и интерактивных элементов */
-button,
-input,
-textarea,
-select {
-    all: unset;
-    font: inherit;
-    color: inherit;
-}
-
-/* Сброс для изображений и медиа */
-img,
-video {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
 /* Убираем стили Squarespace */
+/* Сброс для элементов, связанных со Squarespace */
 [class*="tweak-"],
 [id*="sqs-"],
 [class*="sqs-"],
@@ -77,16 +23,16 @@ video {
 [class*="full-bleed-section"],
 [class*="section-height--"],
 [class*="content-width--"] {
-    all: unset;
+    all: unset !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    border: none !important;
+    background: none !important;
+    font: inherit !important;
+    box-sizing: border-box !important;
+    display: block !important;
 }
 
-/* Сброс анимаций */
-* {
-    animation: none !important;
-    transition: none !important;
-}
-
-/* Сброс стилей для контейнеров */
 .container,
 .site-wrapper,
 .clearfix {
@@ -97,27 +43,25 @@ video {
     display: block !important;
 }
 
-/* Сброс для ссылок и текста */
-a {
-    text-decoration: none !important;
-    color: inherit !important;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: inherit !important;
-    font-weight: normal !important;
-    line-height: normal !important;
-}
-
-/* Убираем лишние отступы и размеры */
+[class*="tweak-"],
+[id*="sqs-"],
+[class*="sqs-"],
+[class*="collection-"],
+[class*="full-bleed-section"],
+[class*="section-height--"],
+[class*="content-width--"],
+.container,
+.site-wrapper,
+.clearfix,
 [class^="sqs-"] {
-    padding: 0 !important;
+    all: unset !important;
     margin: 0 !important;
+    padding: 0 !important;
+    border: none !important;
+    background: none !important;
+    font: inherit !important;
+    box-sizing: border-box !important;
+    display: block !important;
     width: auto !important;
+    max-width: none !important;
 }
