--- a/css/p1.css
+++ b/css/p1.css
@@ -51,24 +51,25 @@
 #tags {
     font-size: 1.375rem; /* 22px в rem (22px / 16px = 1.375rem) */
     font-weight: 500; /* Полужирный текст */
-    color: #444444;
+    color: #e9e9e9;
     margin-top: 2%; /* Отступ сверху */
     letter-spacing: 0.01em; /* Межбуквенное расстояние (1%) */
     max-width: 60%; /* Ограничение ширины заголовка */
 }
 
 #headline1 {
-    font-size: 3.25rem; /* 52px в rem (52px / 16px = 3.25rem) */
+    font-size: 3.5rem; /* 52px в rem (52px / 16px = 3.25rem) */
     font-weight: 600; /* Полужирный текст */
-    color: #000000; /* Черный цвет текста */
+    color: #ffffff; /* Черный цвет текста */
     line-height: 83px; /* Межстрочное расстояние — 83px */
+    max-width: 55%;
 }
 
 #cta-button {
     font-size: 1.4rem; /* 27px в rem (27px / 16px = 1.6875rem) */
     font-weight: 500; /* Полужирный текст */
     letter-spacing: 0.01em; /* Межбуквенное расстояние (1%) */
-    color: #000000; /* Черный цвет текста */
+    color: #ffffff; /* Черный цвет текста */
     background-color: transparent; /* Фон отсутствует */
     border: none; /* Без рамки */
     cursor: pointer;
