--- a/css/p2.css
+++ b/css/p2.css
@@ -26,6 +26,7 @@
     border-top: solid 1px #eee;
     border-bottom: solid 1px #eee;
     margin-top: 5%;
+    padding-top: 2%;
 }
 
 .expertise-section {
